# agentic_options_trader

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  phase-0-validation-protocol.md  roadmap.md  spec-phase-1.md  spec-phase-2.md  spec-phase-3.md
examples/: wheel_quickstart.py
src/: download_slv_flatfiles.py  download_slv_options.py  fetch_contracts.py
src/thetakit/: __init__.py  cli.py
src/thetakit/cloud/: __init__.py
src/thetakit/data/: __init__.py  adapter.py  calendar.py  local_parquet.py  marketdata_app.py  synthetic.py
src/thetakit/dsl/: __init__.py  loader.py  schema.py  validator.py
src/thetakit/engine/: __init__.py  backtest.py  entry.py  events.py  fills.py  greeks.py  portfolio.py  position.py  rolls.py
src/thetakit/mcp_server/: __init__.py  server.py  tools.py
src/thetakit/pricing/: __init__.py  american.py  bsm.py
src/thetakit/reporting/: __init__.py  plots.py  report.py  summary.py
src/thetakit/skill/: SKILL.md
src/thetakit/templates/: __init__.py  covered_call_basic.yaml  credit_spread_equities.yaml  csp_dividend_stocks.yaml  iron_condor_spy.yaml  wheel.yaml
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_dsl_loader.py  test_dsl_schema.py  test_dsl_validator.py  test_engine.py  test_pricing.py
thetakit-cloud/: ARCHITECTURE.md  README.md  STATUS.md
thetakit-cloud/apps/api/: pyproject.toml
thetakit-cloud/apps/api/src/api/: __init__.py  config.py  db.py  deps.py  main.py
thetakit-cloud/apps/api/src/api/models/: __init__.py  billing.py  eval.py  rule.py  user.py
thetakit-cloud/apps/api/src/api/routes/: auth.py  billing.py  evals.py  mcp_proxy.py  rules.py
thetakit-cloud/apps/api/src/api/schemas/: __init__.py  auth.py  eval.py  rule.py
thetakit-cloud/apps/api/src/api/services/: __init__.py  agent_service.py  auth_service.py  credit_service.py  eval_service.py
thetakit-cloud/apps/api/tests/: conftest.py
thetakit-cloud/apps/api/tests/integration/: test_api_endpoints.py
thetakit-cloud/apps/api/tests/unit/: test_agent_service.py  test_credit_ledger.py  test_eval_service.py
thetakit-cloud/apps/compute/: pyproject.toml
thetakit-cloud/apps/compute/src/compute/: __init__.py  aggregator.py  eval_runner.py  path_simulator.py  strategy_runner.py  stress.py
thetakit-cloud/apps/compute/src/compute/hmm/: __init__.py  model.py
thetakit-cloud/apps/compute/tests/: test_aggregator.py  test_eval_runner.py  test_hmm.py
