[project]
name = "thetakit"
version = "0.1.0"
description = "Open source premium-selling backtest toolkit for serious retail options traders"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "thetakit contributors" }]
keywords = ["options", "backtest", "trading", "premium-selling", "wheel", "covered-call"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "polars>=1.0",
    "scipy>=1.14",
    "numpy>=1.26",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "pyright>=1.1.370",
]
pricing = [
    "py_vollib_vectorized>=0.1.1",
]
mcp = [
    "mcp>=0.9",
]
data = [
    "requests>=2.31",
    "pyarrow>=16.0",
]

[project.scripts]
thetakit = "thetakit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thetakit"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.pyright]
include = ["src/thetakit"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests", "thetakit-cloud/apps/api/tests", "thetakit-cloud/apps/compute/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (run with -m slow)",
]
