[project]
name = "thetakit-api"
version = "0.1.0"
description = "FastAPI backend for thetakit.cloud"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "thetakit",
    "thetakit-compute",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
