[project]
name = "thetakit-compute"
version = "0.1.0"
description = "HMM + Monte Carlo compute engine for thetakit.cloud"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.14",
    "thetakit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compute"]
